openturns/1.20/_sources/auto_calibration/least_squares_and_gaussian_calibration/index.rst.txt


.. _sphx_glr_auto_calibration_least_squares_and_gaussian_calibration:

.. _Least squares and gaussian calibration:

Least squares and gaussian calibration
--------------------------------------



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Calibration without observed inputs">

.. only:: html

  .. image:: /auto_calibration/least_squares_and_gaussian_calibration/images/thumb/sphx_glr_plot_calibration_withoutobservedinputs_thumb.png
    :alt:

  :ref:`sphx_glr_auto_calibration_least_squares_and_gaussian_calibration_plot_calibration_withoutobservedinputs.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Calibration without observed inputs</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Calibration of the deflection of a tube">

.. only:: html

  .. image:: /auto_calibration/least_squares_and_gaussian_calibration/images/thumb/sphx_glr_plot_calibration_deflection_tube_thumb.png
    :alt:

  :ref:`sphx_glr_auto_calibration_least_squares_and_gaussian_calibration_plot_calibration_deflection_tube.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Calibration of the deflection of a tube</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Calibration of the logistic model">

.. only:: html

  .. image:: /auto_calibration/least_squares_and_gaussian_calibration/images/thumb/sphx_glr_plot_calibration_logistic_thumb.png
    :alt:

  :ref:`sphx_glr_auto_calibration_least_squares_and_gaussian_calibration_plot_calibration_logistic.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Calibration of the logistic model</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Calibration of the Chaboche mechanical model">

.. only:: html

  .. image:: /auto_calibration/least_squares_and_gaussian_calibration/images/thumb/sphx_glr_plot_calibration_chaboche_thumb.png
    :alt:

  :ref:`sphx_glr_auto_calibration_least_squares_and_gaussian_calibration_plot_calibration_chaboche.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Calibration of the Chaboche mechanical model</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Calibration of the flooding model">

.. only:: html

  .. image:: /auto_calibration/least_squares_and_gaussian_calibration/images/thumb/sphx_glr_plot_calibration_flooding_thumb.png
    :alt:

  :ref:`sphx_glr_auto_calibration_least_squares_and_gaussian_calibration_plot_calibration_flooding.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Calibration of the flooding model</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_calibration/least_squares_and_gaussian_calibration/plot_calibration_withoutobservedinputs
   /auto_calibration/least_squares_and_gaussian_calibration/plot_calibration_deflection_tube
   /auto_calibration/least_squares_and_gaussian_calibration/plot_calibration_logistic
   /auto_calibration/least_squares_and_gaussian_calibration/plot_calibration_chaboche
   /auto_calibration/least_squares_and_gaussian_calibration/plot_calibration_flooding

