openturns/1.23/_sources/auto_calibration/least_squares_and_gaussian_calibration/index.rst.txt


.. _sphx_glr_auto_calibration_least_squares_and_gaussian_calibration:

.. _Least squares and gaussian calibration:

Least squares and gaussian calibration
--------------------------------------



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example we are interested in the calibration of the flooding model &lt;use-case-flood-mode...">

.. only:: html

  .. image:: /auto_calibration/least_squares_and_gaussian_calibration/images/thumb/sphx_glr_plot_generate_flooding_thumb.png
    :alt:

  :ref:`sphx_glr_auto_calibration_least_squares_and_gaussian_calibration_plot_generate_flooding.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Generate flooding model observations</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example we present the calibration of a parametric module. To do this, we show how to d...">

.. only:: html

  .. image:: /auto_calibration/least_squares_and_gaussian_calibration/images/thumb/sphx_glr_plot_calibration_quickstart_thumb.png
    :alt:

  :ref:`sphx_glr_auto_calibration_least_squares_and_gaussian_calibration_plot_calibration_quickstart.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Calibrate a parametric model: a quick-start guide to calibration</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example we present the simulation of noisy observations of the Chaboche model. A detail...">

.. only:: html

  .. image:: /auto_calibration/least_squares_and_gaussian_calibration/images/thumb/sphx_glr_plot_generate_chaboche_thumb.png
    :alt:

  :ref:`sphx_glr_auto_calibration_least_squares_and_gaussian_calibration_plot_generate_chaboche.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Generate observations of the Chaboche mechanical model</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Calibration without observed inputs">

.. only:: html

  .. image:: /auto_calibration/least_squares_and_gaussian_calibration/images/thumb/sphx_glr_plot_calibration_withoutobservedinputs_thumb.png
    :alt:

  :ref:`sphx_glr_auto_calibration_least_squares_and_gaussian_calibration_plot_calibration_withoutobservedinputs.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Calibration without observed inputs</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="We present a calibration study of the logistic growth model defined use-case-logistic. The data...">

.. only:: html

  .. image:: /auto_calibration/least_squares_and_gaussian_calibration/images/thumb/sphx_glr_plot_calibration_logistic_thumb.png
    :alt:

  :ref:`sphx_glr_auto_calibration_least_squares_and_gaussian_calibration_plot_calibration_logistic.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Calibration of the logistic model</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, we calibrate the deflection of a tube as described in the use cases &lt;use-case-...">

.. only:: html

  .. image:: /auto_calibration/least_squares_and_gaussian_calibration/images/thumb/sphx_glr_plot_calibration_deflection_tube_thumb.png
    :alt:

  :ref:`sphx_glr_auto_calibration_least_squares_and_gaussian_calibration_plot_calibration_deflection_tube.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Calibration of the deflection of a tube</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example we are interested in the calibration of the flooding model &lt;use-case-flood-mode...">

.. only:: html

  .. image:: /auto_calibration/least_squares_and_gaussian_calibration/images/thumb/sphx_glr_plot_calibration_flooding_thumb.png
    :alt:

  :ref:`sphx_glr_auto_calibration_least_squares_and_gaussian_calibration_plot_calibration_flooding.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Calibration of the flooding model</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example we present calibration methods on the Chaboche model. A detailed explanation of...">

.. only:: html

  .. image:: /auto_calibration/least_squares_and_gaussian_calibration/images/thumb/sphx_glr_plot_calibration_chaboche_thumb.png
    :alt:

  :ref:`sphx_glr_auto_calibration_least_squares_and_gaussian_calibration_plot_calibration_chaboche.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Calibration of the Chaboche mechanical model</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_calibration/least_squares_and_gaussian_calibration/plot_generate_flooding
   /auto_calibration/least_squares_and_gaussian_calibration/plot_calibration_quickstart
   /auto_calibration/least_squares_and_gaussian_calibration/plot_generate_chaboche
   /auto_calibration/least_squares_and_gaussian_calibration/plot_calibration_withoutobservedinputs
   /auto_calibration/least_squares_and_gaussian_calibration/plot_calibration_logistic
   /auto_calibration/least_squares_and_gaussian_calibration/plot_calibration_deflection_tube
   /auto_calibration/least_squares_and_gaussian_calibration/plot_calibration_flooding
   /auto_calibration/least_squares_and_gaussian_calibration/plot_calibration_chaboche

